--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,6 @@ services:
       - app_network
     labels:
       - "traefik.enable=true"
-      - "traefik.http.services.neon-neo4j.loadbalancer.server.port=7474"
       # Router para http://snorlax.localhost/
       - "traefik.http.routers.neon-neo4j.rule=Host(`snorlax.localhost`)"
         # Router para http://mewtwo.localhost/api
@@ -160,9 +159,12 @@ services:
     container_name: error-pages
     restart: always
     volumes:
+      - ./site-content:/usr/share/nginx/html
       - ./error-pages:/usr/share/nginx/html:ro
     networks:
       - app_network
     labels:
       - "traefik.enable=true"
-      - "traefik.http.services.error-pages.loadbalancer.server.port=80"
+      - "traefik.http.routers.nginx.rule=Host(`hello.localhost`)"
+      - "traefik.http.routers.nginx.entrypoints=web"
+      - "traefik.http.services.nginx.loadbalancer.server.port=80"
